<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.1</version>
        <relativePath/>
    </parent>

    <groupId>com.example</groupId>
    <artifactId>tsubuyaki-board</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>tsubuyaki-board</name>
    <description>社内つぶやきボード — AI 駆動開発研修用 Spring Boot アプリ</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- 静的解析・カバレッジ -->
        <jacoco-plugin.version>0.8.12</jacoco-plugin.version>
        <spotbugs-plugin.version>4.8.6.6</spotbugs-plugin.version>
        <checkstyle-plugin.version>3.6.0</checkstyle-plugin.version>
        <checkstyle.version>10.18.2</checkstyle.version>

        <!-- Spring プロファイル既定値 (local/h2 プロファイルで上書き)。
             spring-boot:run の profiles 設定に渡される。-Pcoverage-dayN 等を
             単独指定すると activeByDefault の local が無効化されるため、
             ここでフォールバック値を定義しておく -->
        <spring.profiles.active>local</spring.profiles.active>

        <!-- カバレッジ閾値 (coverage-day1/2/3 プロファイルで上書き) -->
        <jacoco.line-min>0.60</jacoco.line-min>

        <!-- 静的解析の fail-on-violation (strict プロファイルで true に切替) -->
        <checkstyle.fail-on-violation>false</checkstyle.fail-on-violation>
        <spotbugs.fail-on-error>false</spotbugs.fail-on-error>
        <jacoco.halt-on-failure>false</jacoco.halt-on-failure>
    </properties>

    <dependencies>
        <!-- Web / View -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

        <!-- Persistence -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!-- Validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- Actuator (health endpoint) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Database drivers -->
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <!-- Migration -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-oracle</artifactId>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

       <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
       </dependency>

<dependency>
    <groupId>org.mockito</groupId>
    <artifactId>mockito-junit-jupiter</artifactId>
    <scope>test</scope>
</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- -Plocal / -Ph2 を spring-boot:run の Spring プロファイルに反映する。
                         これが無いと Maven プロパティ spring.profiles.active は fork された
                         アプリ JVM に伝搬せず、-Ph2 spring-boot:run でも既定 (local=Oracle)
                         で起動してしまう。テスト (surefire) は src/test/resources の
                         application.yml により常に h2 固定で、本設定の影響を受けない -->
                    <profiles>
                        <profile>${spring.profiles.active}</profile>
                    </profiles>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-wrapper-plugin</artifactId>
                <version>3.3.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- ===== Checkstyle ===== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>config/checkstyle.xml</configLocation>
                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
                    <failOnViolation>${checkstyle.fail-on-violation}</failOnViolation>
                    <consoleOutput>true</consoleOutput>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>checkstyle-verify</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- ===== SpotBugs ===== -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${spotbugs-plugin.version}</version>
                <configuration>
                    <effort>Max</effort>
                    <threshold>Default</threshold>
                    <excludeFilterFile>config/spotbugs-exclude.xml</excludeFilterFile>
                    <failOnError>${spotbugs.fail-on-error}</failOnError>
                    <xmlOutput>true</xmlOutput>
                    <xmlOutputDirectory>${project.build.directory}/spotbugs</xmlOutputDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>spotbugs-verify</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- ===== JaCoCo ===== -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-plugin.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-prepare</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-report</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <haltOnFailure>${jacoco.halt-on-failure}</haltOnFailure>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>${jacoco.line-min}</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- ===== Spring プロファイル切替 ===== -->
        <profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <spring.profiles.active>local</spring.profiles.active>
            </properties>
        </profile>
        <profile>
            <id>h2</id>
            <properties>
                <spring.profiles.active>h2</spring.profiles.active>
            </properties>
        </profile>

        <!-- ===== カバレッジ閾値 (日毎にスライド) ===== -->
        <profile>
            <id>coverage-day1</id>
            <properties>
                <jacoco.line-min>0.60</jacoco.line-min>
            </properties>
        </profile>
        <profile>
            <id>coverage-day2</id>
            <properties>
                <jacoco.line-min>0.70</jacoco.line-min>
            </properties>
        </profile>
        <profile>
            <id>coverage-day3</id>
            <properties>
                <jacoco.line-min>0.80</jacoco.line-min>
            </properties>
        </profile>

        <!-- ===== 静的解析の厳格化 (仕上げフェーズ or 評価用) ===== -->
        <profile>
            <id>strict</id>
            <properties>
                <checkstyle.fail-on-violation>true</checkstyle.fail-on-violation>
                <spotbugs.fail-on-error>true</spotbugs.fail-on-error>
                <jacoco.halt-on-failure>true</jacoco.halt-on-failure>
            </properties>
        </profile>
    </profiles>
</project>
